samples/_failures_safe/1761466868_96b9bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90d1aa11.c: In function ‘main’:
./samples/SAFE/__tmp_90d1aa11.c:119:20: error: missing terminating " character
  119 |             printf("Failed to add log entry %zu\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_90d1aa11.c:119:13: error: expected expression at end of input
  119 |             printf("Failed to add log entry %zu\n
      |             ^~~~~~
./samples/SAFE/__tmp_90d1aa11.c:119:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90d1aa11.c:119:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90d1aa11.c:119:13: error: expected declaration or statement at end of input
